--- a/QiHuangDJ/VIewController/Information/InfomationViewController.xib
+++ b/QiHuangDJ/VIewController/Information/InfomationViewController.xib
@@ -91,6 +91,17 @@
                                         <outlet property="delegate" destination="-1" id="hC3-5V-e0S"/>
                                     </connections>
                                 </webView>
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="0ci-Xy-XAd">
+                                    <rect key="frame" x="4" y="343" width="312" height="336"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="336" id="pgG-NL-Eah"/>
+                                    </constraints>
+                                    <connections>
+                                        <outlet property="dataSource" destination="-1" id="YfF-hQ-Odu"/>
+                                        <outlet property="delegate" destination="-1" id="eDG-n5-slI"/>
+                                    </connections>
+                                </tableView>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
@@ -102,17 +113,21 @@
                                 <constraint firstAttribute="trailing" secondItem="go4-n8-yhE" secondAttribute="trailing" constant="8" id="HBi-BJ-U8J"/>
                                 <constraint firstItem="I4v-62-nDf" firstAttribute="leading" secondItem="0rM-3w-Wt2" secondAttribute="leading" constant="8" id="HVr-ZC-tYc"/>
                                 <constraint firstItem="HxQ-dz-DUD" firstAttribute="top" secondItem="go4-n8-yhE" secondAttribute="bottom" constant="8" id="IcI-Bb-8Y3"/>
+                                <constraint firstItem="0ci-Xy-XAd" firstAttribute="top" secondItem="I4v-62-nDf" secondAttribute="bottom" constant="3" id="JH3-63-d9d"/>
                                 <constraint firstItem="RdP-RT-CfE" firstAttribute="top" secondItem="bVO-6a-ySk" secondAttribute="bottom" constant="8" id="KCT-L2-1aL"/>
                                 <constraint firstItem="bVO-6a-ySk" firstAttribute="leading" secondItem="0rM-3w-Wt2" secondAttribute="leading" constant="8" id="KQb-QF-hx4"/>
                                 <constraint firstItem="go4-n8-yhE" firstAttribute="top" secondItem="RdP-RT-CfE" secondAttribute="bottom" constant="8" id="M8b-R2-twa"/>
                                 <constraint firstAttribute="trailing" secondItem="ArM-KN-b7K" secondAttribute="trailing" constant="8" id="ROU-gp-c8J"/>
                                 <constraint firstAttribute="trailing" secondItem="HxQ-dz-DUD" secondAttribute="trailing" constant="8" id="SHf-3j-kSD"/>
-                                <constraint firstAttribute="bottom" secondItem="I4v-62-nDf" secondAttribute="bottom" constant="50" id="bFS-ju-Wxj"/>
                                 <constraint firstAttribute="trailing" secondItem="I4v-62-nDf" secondAttribute="trailing" constant="8" id="bf6-PA-PqA"/>
                                 <constraint firstItem="bVO-6a-ySk" firstAttribute="top" secondItem="ArM-KN-b7K" secondAttribute="bottom" constant="8" id="coT-XW-8iA"/>
+                                <constraint firstAttribute="bottom" secondItem="0ci-Xy-XAd" secondAttribute="bottom" constant="-289" id="emR-Dx-zhz"/>
                                 <constraint firstItem="HxQ-dz-DUD" firstAttribute="leading" secondItem="0rM-3w-Wt2" secondAttribute="leading" constant="8" id="fW6-UU-QYc"/>
+                                <constraint firstItem="0ci-Xy-XAd" firstAttribute="top" secondItem="I4v-62-nDf" secondAttribute="bottom" constant="3" id="gyZ-TT-Bd1"/>
+                                <constraint firstItem="0ci-Xy-XAd" firstAttribute="leading" secondItem="0rM-3w-Wt2" secondAttribute="leading" constant="4" id="hhF-br-I4z"/>
                                 <constraint firstItem="ArM-KN-b7K" firstAttribute="top" secondItem="0rM-3w-Wt2" secondAttribute="top" constant="8" id="kmz-d6-POf"/>
                                 <constraint firstItem="RdP-RT-CfE" firstAttribute="leading" secondItem="0rM-3w-Wt2" secondAttribute="leading" constant="8" id="rMr-Vj-nY6"/>
+                                <constraint firstAttribute="trailing" secondItem="0ci-Xy-XAd" secondAttribute="trailing" constant="4" id="xaa-6l-Hre"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -138,7 +153,7 @@
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-            <point key="canvasLocation" x="-213" y="372"/>
+            <point key="canvasLocation" x="-314" y="404"/>
         </view>
     </objects>
     <resources>
